--- a/src/assets/css/subscribe-popup.sass
+++ b/src/assets/css/subscribe-popup.sass
@@ -1,69 +1,63 @@
-@media (max-width: 449px), (max-height: 660px)
-  .subscribe-popup,
-  .subscribe-popup-background
+@import "vars.sass"
+
+// $max-width
+@media (max-width: $max-width), (max-height: $max-height)
+  .subscribe-popup-wrapper
     display: none!important
 
-.subscribe-popup-background
-  opacity: .6
-  background: #000
+.subscribe-popup-wrapper
   position: fixed
   left: 0
   top: 0
-  width: 100%
-  height: 100%
-  display: none
-  z-index: 1000
-
-.subscribe-popup
-  width: 380px
-  height: 600px
-  position: fixed
-  top: 50%
-  left: 50%
   display: none
   z-index: 10000
+  width: 100%
+  height: 100%
+  border: 0
+  background: rgba(0, 0, 0, .6)
 
-  .subscribe-popup-close
+  &.js-active
+    display: block
+
+  *
+    box-sizing: border-box
+
+.subscribe-popup
+  width: $popup-width
+  height: $popup-height
+  display: inline-block
+  position: relative
+
+  &::after
+    content: '×'
     background: #0000ff
     display: block
-    width: 30px
-    height: 30px
-    -webkit-border-radius: 100%
-    -moz-border-radius: 100%
+    width: $close-width
+    height: $close-height
     border-radius: 100%
     color: #fff
     font-size: 20px
     text-align: center
     line-height: 30px
     position: absolute
-    top: -30px
-    right: -30px
+    top: -$close-height
+    right: -$close-width
     cursor: pointer
+    font-family: sans-serif
 
     &:hover
       background: #1b41ff
 
   form
-    font-family: Arial, 'Helvetica Neue', sans-serif
+    font-family: $font-family
     padding: 205px 23px 40px
     color: #000
     background: url('../images/backgound-image.jpg') no-repeat 1px 0 #fff
     height: 100%
-    -moz-box-sizing: border-box
-    -webkit-box-sizing: border-box
     box-sizing: border-box
 
-    ::-webkit-input-placeholder
-       color: #9f9f9f
-
-    :-moz-placeholder
-       color: #9f9f9f
-
-    ::-moz-placeholder
-       color: #9f9f9f
-
-    :-ms-input-placeholder
-       color: #9f9f9f
+    ::placeholder
+      color: #9f9f9f
 
     h1
       color: #3c3c3c
@@ -86,15 +80,13 @@
   label
     margin-bottom: 12px
     display: block
-    font-family: Arial, 'Helvetica Neue', sans-serif
+    font-family: $font-family
     font-size: 16px
 
   input
     width: 310px
-    -moz-box-sizing: border-box
-    -webkit-box-sizing: border-box
     box-sizing: border-box
-    font-family: Arial, 'Helvetica Neue', sans-serif
+    font-family: $font-family
     font-size: 16px
 
   .input-text
